--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
             <button class="clear">C</button>
             <button class="equal">=</button>
             <button class="operator">/</button>
+            
+            <button></button>
+            <button></button>
+            <button></button>
+            <button></button>
         </div>
     </div>
     <script>
