--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
             <button class="operator">x</button>
 
             <button class="number">0</button>
-            <button class="clear">C</button>
+            <button class="number">.</button>
             <button class="equal">=</button>
             <button class="operator">/</button>
-            
+
             <button></button>
-            <button></button>
-            <button></button>
-            <button></button>
+            <button class="clear"></button>
+            <button class="clear">C</button>
+            <button class="equal">=</button>
         </div>
     </div>
     <script>
