--- a/index.html
+++ b/index.html
@@ -13,7 +13,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/faicon-16x16.png">
     <script src="script.js"></script>
 </head>
+
 <body>
+    <script>
+        if (typeof navigator.serviceWorker !== 'undefined') {
+            navigator.serviceWorker.register('sw.js')
+        }
+    </script>
     <div class="calculator">
         <input type="text" id="input">
         <button onclick="switchCss()" id="toggleBtn">LM</button>
