--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
             <button class="number">3</button>
             <button class="operator">x</button>
 
+            <button class="operator">(</button>
             <button class="number">0</button>
-            <button class="number"></button>
-            <button class="number">.</button>
+            <button class="operator">)</button>
             <button class="operator">/</button>
 
-            <button></button>
-            <button class="clear"></button>
             <button class="clear">C</button>
+            <button class="operator">%</button>
+            <button class="number">.</button>
             <button class="equal">=</button>
         </div>
     </div>
