--- a/index.html
+++ b/index.html
@@ -30,22 +30,18 @@
             <button class="number">8</button>
             <button class="number">9</button>
             <button class="operator">+</button>
-
             <button class="number">4</button>
             <button class="number">5</button>
             <button class="number">6</button>
             <button class="operator">-</button>
-
             <button class="number">1</button>
             <button class="number">2</button>
             <button class="number">3</button>
             <button class="operator">x</button>
-
             <button class="operator">(</button>
             <button class="number">0</button>
             <button class="operator">)</button>
             <button class="operator">/</button>
-
             <button class="clear">C</button>
             <button class="operator">%</button>
             <button class="number">.</button>
@@ -53,48 +49,35 @@
         </div>
     </div>
     <script>
-        const input = document.getElementById('input');
-        const buttons = document.getElementById('buttons');
+        const input = document.getElementById("input");
+        const buttons = document.getElementById("buttons");
+        let operatorPressed = false;
 
-        buttons.addEventListener('click', function (event) {
-            const button = event.target;
+        buttons.addEventListener("click", event => {
+            const target = event.target;
+            const value = target.innerText;
 
-            if (button.classList.contains('clear')) {
-                input.value = '';
-                return;
-            }
-
-            if (button.classList.contains('equal')) {
-                try {
-                    input.value = calculate(input.value);
-                } catch (e) {
-                    input.value = 'Invalid expression';
+            if (target.classList.contains("number")) {
+                input.value += value;
+                operatorPressed = false;
+            } else if (target.classList.contains("operator")) {
+                if (!operatorPressed) {
+                    input.value += value;
+                    operatorPressed = true;
                 }
-                return;
-            }
-
-            input.value += button.textContent;
-        });
-
-        input.addEventListener('keydown', function (event) {
-            if (event.key === 'Enter') {
-                try {
-                    input.value = calculate(input.value);
-                } catch (e) {
-                    input.value = 'Invalid expression';
-                }
+            } else if (target.classList.contains("equal")) {
+                input.value = eval(input.value);
+                operatorPressed = false;
+            } else if (target.classList.contains("clear")) {
+                input.value = "";
+                operatorPressed = false;
             }
         });
 
-        function calculate(expression) {
-            expression = expression.replace(/x/g, '*');
-            const regex = /[^-()\d/*+.]/g;
-            if (regex.test(expression)) {
-                throw new Error('Invalid characters in expression');
-            }
-            const fn = new Function(`return ${expression}`);
-            return fn();
+        function switchCss() {
+            document.documentElement.classList.toggle("dark");
         }
+
     </script>
 </body>
 
